Add job for shoes scrapping and add index endpoint for shoes
