# app/models/shoe.rb
@@ -1,13 +1,18 @@
 class Shoe < ApplicationRecord
-  belongs_to :brand
-  belongs_to :size
-  belongs_to :color
-  belongs_to :target_audience
-  belongs_to :source
-  belongs_to :category
+  belongs_to :brand, optional: true
+  belongs_to :size, optional: true
+  belongs_to :color, optional: true
+  belongs_to :target_audience, optional: true
+  belongs_to :source, optional: true
+  belongs_to :category, optional: true
 
   has_many :user_shoes, class_name: 'UserShoe', dependent: :destroy
   has_many :users, through: :user_shoes
+  has_and_belongs_to_many :searches
+
+  validates :images, :name, :price, :product_url, presence: true
+
+  scope :by_search_id, ->(search_id) { joins(:searches_shoes).where(searches_shoes: { search_id: }) }
 end
 
 # == Schema Information
@@ -22,12 +27,12 @@ end
 #  product_url        :text             not null
 #  created_at         :datetime         not null
 #  updated_at         :datetime         not null
-#  brand_id           :bigint           not null
-#  category_id        :bigint           not null
-#  color_id           :bigint           not null
-#  size_id            :bigint           not null
-#  source_id          :bigint           not null
-#  target_audience_id :bigint           not null
+#  brand_id           :bigint
+#  category_id        :bigint
+#  color_id           :bigint
+#  size_id            :bigint
+#  source_id          :bigint
+#  target_audience_id :bigint
 #
 # Indexes
 #
